logs/rc_analyzer_20250623_024552.log
2025-06-23 02:45:52,076 - __main__ - INFO - Starting Radiochromic Film Analyzer
2025-06-23 02:45:52,131 - app.rc_analyzer - INFO - Initializing RCAnalyzer application
2025-06-23 02:45:52,135 - app.rc_analyzer - INFO - Cleaned up local temp directory: C:\Users\Pablo\OneDrive - UAM\2 Proyectos\1 Otros\0 Software_propio_utilidades\RC\analizadorrc\temp
2025-06-23 02:45:52,135 - app.rc_analyzer - INFO - Cleaned up log and temporary files
2025-06-23 02:45:52,136 - app.utils.config_manager - INFO - Configuration manager initialized
2025-06-23 02:45:52,136 - app.utils.config_manager - INFO - Configuration loaded from file
2025-06-23 02:45:52,155 - app.core.image_processor - INFO - System info: {'platform': 'Windows', 'processor': 'AMD64 Family 23 Model 113 Stepping 0, AuthenticAMD', 'cpu_count': 12, 'memory_gb': 31.94003677368164, 'python_version': '3.12.0', 'opencv_version': '4.11.0'}
2025-06-23 02:45:52,156 - app.core.image_processor - WARNING - CUDA not available, skipping GPU initialization
2025-06-23 02:45:52,156 - app.core.image_processor - INFO - Image processor initialized
2025-06-23 02:45:52,156 - app.utils.file_manager - INFO - File manager initialized
2025-06-23 02:45:52,196 - app.plugins.plugin_manager - ERROR - Failed to load plugin 'auto_measurements': invalid syntax (auto_measurements.py, line 1611)
Traceback (most recent call last):
  File "C:\Users\Pablo\OneDrive - UAM\2 Proyectos\1 Otros\0 Software_propio_utilidades\RC\analizadorrc\app\plugins\plugin_manager.py", line 66, in scan_plugins
    module = self._load_module(name, path)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Pablo\OneDrive - UAM\2 Proyectos\1 Otros\0 Software_propio_utilidades\RC\analizadorrc\app\plugins\plugin_manager.py", line 196, in _load_module
    loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 990, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1128, in get_code
  File "<frozen importlib._bootstrap_external>", line 1058, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "C:\Users\Pablo\OneDrive - UAM\2 Proyectos\1 Otros\0 Software_propio_utilidades\RC\analizadorrc\custom_plugins\auto_measurements.py", line 1611
    else:
    ^^^^
SyntaxError: invalid syntax
2025-06-23 02:45:52,218 - app.ui.image_panel - INFO - Image panel initialized
2025-06-23 02:45:52,235 - app.ui.measurement_panel - INFO - Measurement panel initialized
2025-06-23 02:45:52,247 - app.ui.image_settings_panel - INFO - Image settings panel initialized
2025-06-23 02:45:52,251 - app.ui.main_window - INFO - Main window initialized
2025-06-23 02:45:52,251 - app.rc_analyzer - INFO - RCAnalyzer initialization complete
2025-06-23 02:45:54,483 - app.ui.main_window - INFO - Loading image: C:\Users\Pablo\OneDrive - UAM\4 Protonterapia\1 Experimentos\1 Experimentos\2025_05_06_PT\scans_070525\RC1_2_3.tiff (Size: 14.94 MB)
2025-06-23 02:45:54,652 - app.core.image_processor - INFO - Loading image: C:\Users\Pablo\OneDrive - UAM\4 Protonterapia\1 Experimentos\1 Experimentos\2025_05_06_PT\scans_070525\RC1_2_3.tiff, size: 2550x3510
2025-06-23 02:45:54,658 - app.core.image_processor - INFO - Computing integral images for fast statistics
2025-06-23 02:45:54,823 - app.core.image_processor - INFO - Integral images computed successfully
2025-06-23 02:45:54,827 - app.core.image_processor - INFO - Loaded image: C:\Users\Pablo\OneDrive - UAM\4 Protonterapia\1 Experimentos\1 Experimentos\2025_05_06_PT\scans_070525\RC1_2_3.tiff
2025-06-23 02:45:56,023 - app.core.image_processor - INFO - Computing integral images for fast statistics
2025-06-23 02:45:56,198 - app.core.image_processor - INFO - Integral images computed successfully
2025-06-23 02:45:56,202 - app.core.image_processor - INFO - Calibration applied successfully – dose image ready (3-channel float32)
2025-06-23 02:45:56,249 - app.ui.main_window - INFO - Loaded image: C:\Users\Pablo\OneDrive - UAM\4 Protonterapia\1 Experimentos\1 Experimentos\2025_05_06_PT\scans_070525\RC1_2_3.tiff
2025-06-23 02:46:00,250 - app.rc_analyzer - INFO - Saving configuration before exit
2025-06-23 02:46:00,252 - app.utils.config_manager - INFO - Configuration saved to file
2025-06-23 02:46:00,256 - app.rc_analyzer - INFO - Cleaned up local temp directory: C:\Users\Pablo\OneDrive - UAM\2 Proyectos\1 Otros\0 Software_propio_utilidades\RC\analizadorrc\temp
2025-06-23 02:46:00,257 - app.rc_analyzer - INFO - Cleaned up log and temporary files
2025-06-23 02:46:00,364 - __main__ - INFO - Application closed normally
